--- a/V3/QtSignup.ui
+++ b/V3/QtSignup.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>LoginWindow</class>
- <widget class="QMainWindow" name="LoginWindow">
+ <class>SignupWindow</class>
+ <widget class="QMainWindow" name="SignupWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,19 +11,19 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>TaskManager | Login</string>
+   <string>TaskManager | Signup</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>130</y>
-      <width>471</width>
-      <height>281</height>
+      <x>160</x>
+      <y>100</y>
+      <width>491</width>
+      <height>311</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="loginMainLayout">
+    <layout class="QVBoxLayout" name="signupMainLayout">
      <item>
       <widget class="QLabel" name="errorLabel">
        <property name="font">
@@ -43,14 +43,14 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="loginTitleLabel">
+      <widget class="QLabel" name="signupTitleLable">
        <property name="font">
         <font>
          <pointsize>20</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Log In</string>
+        <string>Sign Up</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -58,14 +58,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="loginUsernameLineEdit">
+      <widget class="QLineEdit" name="signupUsernameLineEdit">
        <property name="font">
         <font>
          <pointsize>20</pointsize>
         </font>
-       </property>
-       <property name="text">
-        <string/>
        </property>
        <property name="placeholderText">
         <string>Username</string>
@@ -73,14 +70,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="loginPasswordLineEdit">
+      <widget class="QLineEdit" name="signupPasswordLineEdit">
        <property name="font">
         <font>
          <pointsize>20</pointsize>
         </font>
-       </property>
-       <property name="text">
-        <string/>
        </property>
        <property name="placeholderText">
         <string>Password</string>
@@ -88,26 +82,38 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="loginSubmitButton">
+      <widget class="QLineEdit" name="signupConfirmPasswordLineEdit">
+       <property name="font">
+        <font>
+         <pointsize>20</pointsize>
+        </font>
+       </property>
+       <property name="placeholderText">
+        <string>Confirm Password</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="signupSubmitButton">
        <property name="font">
         <font>
          <pointsize>18</pointsize>
         </font>
        </property>
        <property name="text">
-        <string>Log In</string>
+        <string>Sign Up</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
-   <widget class="QLabel" name="loginToSignupLabel">
+   <widget class="QLabel" name="signupToLoginLabel">
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>440</y>
-      <width>211</width>
-      <height>51</height>
+      <y>450</y>
+      <width>231</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -116,16 +122,16 @@
      </font>
     </property>
     <property name="text">
-     <string>Don't have an account?</string>
+     <string>Already have an account?</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="signupLink">
+   <widget class="QPushButton" name="loginLink">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>484</x>
       <y>450</y>
-      <width>93</width>
-      <height>28</height>
+      <width>70</width>
+      <height>30</height>
      </rect>
     </property>
     <property name="font">
@@ -135,10 +141,10 @@
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">border: none</string>
+     <string notr="true">border: none;</string>
     </property>
     <property name="text">
-     <string>Sign Up</string>
+     <string>Log In</string>
     </property>
    </widget>
   </widget>
