--- a/V3/layouts/signup.ui
+++ b/V3/layouts/signup.ui
@@ -29,7 +29,7 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QPushButton" name="loginCloseButton">
+    <widget class="QPushButton" name="signupCloseButton">
      <property name="geometry">
       <rect>
        <x>5</x>
@@ -65,11 +65,11 @@
       <string notr="true"/>
      </property>
      <property name="text">
-      <string>Login</string>
+      <string>Signup</string>
      </property>
     </widget>
    </widget>
-   <widget class="QFrame" name="loginFrame">
+   <widget class="QFrame" name="signupFrame">
     <property name="geometry">
      <rect>
       <x>200</x>
@@ -90,10 +90,10 @@
        <x>0</x>
        <y>10</y>
        <width>391</width>
-       <height>283</height>
+       <height>281</height>
       </rect>
      </property>
-     <layout class="QVBoxLayout" name="loginLayout">
+     <layout class="QVBoxLayout" name="signupLayout">
       <property name="spacing">
        <number>20</number>
       </property>
@@ -110,20 +110,7 @@
        <number>20</number>
       </property>
       <item>
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="loginUsernameLineEdit">
+       <widget class="QLineEdit" name="signupUsernameLineEdit">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Expanding" vsizetype="Maximum">
           <horstretch>0</horstretch>
@@ -144,20 +131,7 @@
        </widget>
       </item>
       <item>
-       <spacer name="verticalSpacer_2">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="loginPasswordLineEdit">
+       <widget class="QLineEdit" name="signupPasswordLineEdit">
         <property name="font">
          <font>
           <pointsize>12</pointsize>
@@ -172,20 +146,22 @@
        </widget>
       </item>
       <item>
-       <spacer name="verticalSpacer_3">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
+       <widget class="QLineEdit" name="signupConfirmPasswordLineEdit">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
         </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>40</height>
-         </size>
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
         </property>
-       </spacer>
+        <property name="placeholderText">
+         <string>Confirm Password</string>
+        </property>
+       </widget>
       </item>
       <item alignment="Qt::AlignHCenter">
-       <widget class="QPushButton" name="loginButton">
+       <widget class="QPushButton" name="signupButton">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -203,7 +179,7 @@
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="text">
-         <string>Login</string>
+         <string>Signup</string>
         </property>
        </widget>
       </item>
@@ -227,12 +203,12 @@
         <property name="frameShadow">
          <enum>QFrame::Raised</enum>
         </property>
-        <widget class="QLabel" name="loginToSignupLabel">
+        <widget class="QLabel" name="signupToLoginLabel">
          <property name="geometry">
           <rect>
            <x>50</x>
            <y>0</y>
-           <width>190</width>
+           <width>211</width>
            <height>21</height>
           </rect>
          </property>
@@ -242,15 +218,15 @@
           </font>
          </property>
          <property name="text">
-          <string>Don't have an account?</string>
+          <string>Already have an account?</string>
          </property>
         </widget>
-        <widget class="QPushButton" name="loginToSignupButton">
+        <widget class="QPushButton" name="signupToLoginButton">
          <property name="geometry">
           <rect>
-           <x>240</x>
+           <x>260</x>
            <y>-3</y>
-           <width>71</width>
+           <width>61</width>
            <height>28</height>
           </rect>
          </property>
@@ -265,7 +241,7 @@
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="text">
-          <string>Signup</string>
+          <string>Login</string>
          </property>
         </widget>
        </widget>
@@ -293,7 +269,7 @@
       <rect>
        <x>12</x>
        <y>0</y>
-       <width>721</width>
+       <width>731</width>
        <height>50</height>
       </rect>
      </property>
@@ -309,6 +285,9 @@
      </property>
     </widget>
    </widget>
+   <zorder>errorFrame</zorder>
+   <zorder>headerFrame</zorder>
+   <zorder>signupFrame</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
