--- a/V3/layouts/collections.ui
+++ b/V3/layouts/collections.ui
@@ -106,6 +106,11 @@
        <layout class="QHBoxLayout" name="collectionsLayout2">
         <item>
          <widget class="QPushButton" name="collectionsAddButton">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Add new collection</string>
           </property>
@@ -113,6 +118,11 @@
         </item>
         <item>
          <widget class="QPushButton" name="collectionsDeleteButton">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>Delete selected collection</string>
           </property>
@@ -120,6 +130,11 @@
         </item>
         <item>
          <widget class="QPushButton" name="collectionsViewButton">
+          <property name="font">
+           <font>
+            <pointsize>10</pointsize>
+           </font>
+          </property>
           <property name="text">
            <string>View selected collection</string>
           </property>
@@ -160,11 +175,14 @@
        <x>10</x>
        <y>0</y>
        <width>1171</width>
-       <height>80</height>
+       <height>102</height>
       </rect>
      </property>
      <layout class="QHBoxLayout" name="headerLayout">
       <property name="leftMargin">
+       <number>20</number>
+      </property>
+      <property name="rightMargin">
        <number>20</number>
       </property>
       <item>
@@ -197,6 +215,33 @@
         </property>
         <property name="text">
          <string>Collections</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="collectionsAccountButton">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>50</width>
+          <height>50</height>
+         </size>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
