--- a/src/layouts/account.ui
+++ b/src/layouts/account.ui
@@ -42,7 +42,7 @@
       <property name="leftMargin">
        <number>20</number>
       </property>
-      <item>
+      <item alignment="Qt::AlignVCenter">
        <widget class="QPushButton" name="accountBackButton">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -63,7 +63,7 @@
         </property>
        </widget>
       </item>
-      <item>
+      <item alignment="Qt::AlignVCenter">
        <widget class="QLabel" name="heading">
         <property name="font">
          <font>
