--- a/src/layouts/login.ui
+++ b/src/layouts/login.ui
@@ -285,7 +285,7 @@
       <property name="leftMargin">
        <number>20</number>
       </property>
-      <item>
+      <item alignment="Qt::AlignVCenter">
        <widget class="QPushButton" name="loginCloseButton">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -306,7 +306,7 @@
         </property>
        </widget>
       </item>
-      <item>
+      <item alignment="Qt::AlignVCenter">
        <widget class="QLabel" name="heading">
         <property name="font">
          <font>
