--- a/src/layouts/signup.ui
+++ b/src/layouts/signup.ui
@@ -294,7 +294,7 @@
       <property name="leftMargin">
        <number>20</number>
       </property>
-      <item>
+      <item alignment="Qt::AlignVCenter">
        <widget class="QPushButton" name="signupCloseButton">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
@@ -315,7 +315,7 @@
         </property>
        </widget>
       </item>
-      <item>
+      <item alignment="Qt::AlignVCenter">
        <widget class="QLabel" name="heading">
         <property name="font">
          <font>
