--- a/src/layouts/account.ui
+++ b/src/layouts/account.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>TaskManager | Account</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QFrame" name="headerFrame">
